<resources>
    <string name="app_name">TPIntegrador_Grupo7</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="basica">Calculadora básica</string>
    <string name="cientifica">Calculadora científica</string>
    <string name="config">Configuración</string>
    <string name="historial">Historial de operaciones</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="resta">-</string>
    <string name="multi">x</string>
    <string name="division">/</string>
    <string name="igual">=</string>
    <string name="eliminar">AC</string>
    <string name="borrar">DEL</string>
    <string name="suma">+</string>
    <string name="punto">.</string>
    <string name="porcentaje">%</string>
    <string name="parentAbrir">(</string>
    <string name="parentCerrar">)</string>
    <string name="derecha">←</string>
    <string name="taninverso">tan-1</string>
    <string name="sininverso">sin-1</string>
    <string name="cosinverso">cos-1</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="lognatural">ln</string>
    <string name="logdecimal">log</string>
    <string name="potencia">x^</string>
    <string name="raiz">√</string>
    <string name="pi">π</string>
    <string name="txtTamano">Tamaño del Texto</string>
    <string name="txtTipografia">Tipografía del Texto</string>
    <string name="txtColor">Color del Texto</string>
    <string name="txtBotones">Color de los Botones</string>
    <string name="txtVibracion">Estado de Vibración</string>
    <string name="txtSonido">Estado de Emision de Sonido</string>
    <string name="txtDecimales">Cantidad de decimales</string>
    <string name="txtResultado">Resultado en</string>
    <string name="Guardar">Guardar</string>
    <string name="ver">VER</string>
    <string name="todo">TODO</string>
    <string name="grabando">Grabando...</string>
    <string name="procesando">Procesando...</string>
    <string name="ing_incorrecto">Ingreso incorrecto</string>

    <string-array name="Tamano">
        <item>18px</item>
        <item>20px</item>
        <item>22px</item>
        <item>24px</item>
        <item>26px</item>
        <item>28px</item>
        <item>30px</item>
    </string-array>

    <string-array name="Tipografia">
        <item>Roboto</item>
        <item>Arial</item>
        <item>Times New Roman</item>
        <item>Comic Sans MS</item>
        <item>Quicksand</item>
    </string-array>

    <string-array name="Color">
        <item>Negro</item>
        <item>Blanco</item>
        <item>Rojo</item>
        <item>Azul</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Naranja</item>
        <item>Violeta</item>
    </string-array>

    <string-array name="Botones">
        <item>Negro</item>
        <item>Blanco</item>
        <item>Rojo</item>
        <item>Azul</item>
        <item>Amarillo</item>
        <item>Verde</item>
        <item>Naranja</item>
        <item>Violeta</item>
    </string-array>

    <string-array name="Vibracion">
        <item>Siempre</item>
        <item>Solo Resultado</item>
        <item>Solo Errores</item>
        <item>Nunca</item>
    </string-array>

    <string-array name="Sonido">
        <item>Siempre</item>
        <item>Solo Resultado</item>
        <item>Solo Errores</item>
        <item>Nunca</item>
    </string-array>

    <string-array name="Decimales">
        <item>2 Decimales</item>
        <item>3 Decimales</item>
        <item>4 Decimales</item>
    </string-array>

    <string-array name="Resultado">
        <item>Radiales</item>
        <item>Grados</item>
    </string-array>

</resources>