<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraBasica"
    android:animateLayoutChanges="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:id="@+id/layout_basica">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">

                <EditText
                    android:id="@+id/txtOperacion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:autofillHints="no"
                    android:background="@null"
                    android:clickable="false"
                    android:cursorVisible="true"
                    android:gravity="center|end"
                    android:inputType="textNoSuggestions"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textCursorDrawable="@drawable/cursor_style"
                    android:textSize="50sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">

                <TextView
                    android:id="@+id/txtResultado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center|end"
                    android:lines="1"
                    android:textColor="#000000"
                    android:textSize="50sp" />
            </TableRow>
        </TableLayout>

        <View
            style="@style/Divider"
            android:layout_margin="5dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <Button
                    android:id="@+id/btnBorrar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/borrar"
                    android:textColor="#FFFFFF"
                    android:onClick="borrarDigito"
                    android:textSize="50sp" />

                <ImageButton
                    android:id="@+id/btnIzquierda"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:onClick="moverCursor"
                    android:src="@drawable/ic_flecha_izq" />

                <ImageButton
                    android:id="@+id/btnDerecha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:onClick="moverCursor"
                    android:src="@drawable/ic_flecha_der"
                    android:text="@string/derecha" />

                <Button
                    android:id="@+id/btnEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/eliminar"
                    android:textColor="#FFFFFF"
                    android:onClick="eliminarOperacion"
                    android:textSize="50sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <Button
                    android:id="@+id/btnPorcentaje"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:onClick="porcentajeNumero"
                    android:text="@string/porcentaje"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnAbrirParent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:gravity="center|center_horizontal"
                    android:onClick="ingresarDigito"
                    android:text="@string/parentAbrir"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnCerrarParent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:gravity="center|center_horizontal"
                    android:onClick="ingresarDigito"
                    android:text="@string/parentCerrar"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnDividir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/division"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/seven"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/eight"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/nine"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnMultiplicar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/multi"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/four"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/five"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/six"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnResta"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/resta"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/one"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/two"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/three"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnSumar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:onClick="ingresarDigito"
                    android:background="#000000"
                    android:text="@string/suma"
                    android:textColor="#FFFFFF"
                    android:textSize="50sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btnMic"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:onClick="comandoDeVoz"
                    android:src="@drawable/ic_mic" />

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/zero"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnPunto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/punto"
                    android:textColor="#FFFFFF"
                    android:onClick="ingresarDigito"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/btnIgual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:text="@string/igual"
                    android:textColor="#FFFFFF"
                    android:onClick="calcularOperacion"
                    android:textSize="50sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/alerta_grabando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/alert_grabando"
        android:text="@string/grabando"
        android:textAllCaps="false"
        android:textColor="#ff000000"
        android:textSize="45sp"
        android:visibility="invisible" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_procesando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="#80000000"
        android:visibility="invisible">

        <Button
            android:id="@+id/alerta_procesando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/alert_grabando"
            android:text="@string/procesando"
            android:textAllCaps="false"
            android:textColor="#ff000000"
            android:textSize="45sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>