<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/txtTamano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txtTamano"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbTamano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Tamano" />

        <TextView
            android:id="@+id/txtTipografia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@color/colorPrimary"
            android:gravity="center_vertical"
            android:text="@string/txtTipografia"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbTipografia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Tipografia" />

        <TextView
            android:id="@+id/txtColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txtColor"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Color" />

        <TextView
            android:id="@+id/txtBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txtBotones"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Botones" />

        <TextView
            android:id="@+id/txtVibracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txtVibracion"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbVibracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Vibracion" />

        <TextView
            android:id="@+id/txtSonido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txtSonido"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cbSonido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Sonido" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="148dp"
            android:layout_height="69dp"
            android:layout_gravity="end"
            android:background="#000000"
            android:text="@string/Guardar"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>